- Rename Takeout related buttons for clarity and comprehensiveness  - Refactor initializing logging into a function and  use Flask's g object instead of globals  - Refactor calculating sub-percentage values for database processes  into a function  - Add a 'VACUUM' query to the end of update_videos  - In takeout_help.html, add a link to Google Takeout  - Add initialize_logging calls to functions for adding/updating  Takeout data

--- a/templates/help/takeout_help.html
+++ b/templates/help/takeout_help.html
@@ -2,7 +2,11 @@
 <div id="takeout-help" class="{{ '' if description or not db else 'hidden' }}">
     <div class="help-item">
         <div id="takeout-single-file-description">
-            Enter the path to the watch-history.html file from Google Takeout.
+            Enter the path to the watch-history.html file from
+            <a class="link-btn link-btn:visited"
+               href="https://takeout.google.com/settings/takeout"
+               target="_blank">Google Takeout</a>.
+            <br>
             <a href="#" id="multiple-files-link" class="link-btn">For multiple Takeout downloads...</a>
         </div>
         <div id="takeout-multiple-files-description" class="hidden">
