- Remove useless initialize_logging function from utils  - Blacklist the matplotlib logger  - Add a param for enabling types parsing in the sqlite_connection  function  - Remove 60% width limit from both web pages' layout  - Add experimental functionality for generating an interactive plot  and displaying it on a web page, using Altair

--- a/static/main.css
+++ b/static/main.css
@@ -4,7 +4,35 @@
 
 #main-container {
     margin: 1% auto 1% auto;
-    width: 40%;
+    width: 60%;
+}
+
+#data-visualisation {
+    /*display: flex;*/
+    /*align-items: center;*/
+    /*justify-content: center;*/
+    /*overflow: auto;*/
+}
+
+svg {
+    /*background-color: gray;*/
+    /*display: block;*/
+    /*margin: auto;*/
+    /*width: 100%;*/
+    /*height: 100%;*/
+}
+
+/*use {*/
+   /*fill: red;*/
+/*}*/
+
+path {
+    /*fill: red;*/
+}
+
+#data-visualisation > div > svg:hover{
+    /*width: 150%;*/
+    /*height: 150%;*/
 }
 
 input, select, textarea, button {
