--- a/templates/index.html
+++ b/templates/index.html
@@ -40,5 +40,11 @@
             <div id="wait-for-db"></div>
         </div>
     </div>
+
     <script src="{{ url_for('static', filename='js/manage_takeout.js') }}"></script>
+    </div>
+    <div id="data-visualisation">
+{#        <div>{{ fig| safe}}</div>#}
+    </div>
+    <div>{{ wut| safe}}</div>
 {% endblock %}
