--- a/static/main.css
+++ b/static/main.css
@@ -7,32 +7,13 @@
     width: 60%;
 }
 
-#data-visualisation {
-    /*display: flex;*/
-    /*align-items: center;*/
-    /*justify-content: center;*/
-    /*overflow: auto;*/
+#visualization {
+    width: 100%;
 }
 
-svg {
-    /*background-color: gray;*/
-    /*display: block;*/
-    /*margin: auto;*/
-    /*width: 100%;*/
-    /*height: 100%;*/
-}
-
-/*use {*/
-   /*fill: red;*/
-/*}*/
-
-path {
-    /*fill: red;*/
-}
-
-#data-visualisation > div > svg:hover{
-    /*width: 150%;*/
-    /*height: 150%;*/
+canvas, svg {
+    margin: auto;
+    display: block;
 }
 
 input, select, textarea, button {
