--- a/templates/index.html
+++ b/templates/index.html
@@ -40,19 +40,5 @@
             <div id="wait-for-db"></div>
         </div>
     </div>
-
-    <script src="https://cdn.jsdelivr.net/npm/vega@3"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vega-lite@2"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vega-embed@3"></script>
-    <div id="visualization"></div>
-    <script type="text/javascript">
-        let spec = JSON.parse('{{ plot_data | tojson |  safe }}');  /* JSON dump of your chart's spec */
-        let opt = {"renderer": "svg", "actions": false};  /* Options for the embedding */
-        vegaEmbed("#visualization", spec, opt).then(function(data) {
-            data.view.width(window.screen.width - 38 - 44 - 20);
-            // 38 is padding set by vega-embed class, 44 is added to the canvas/svg size, not sure by what
-            data.view.runAsync();
-        });
-    </script>
-    </script>
+    <script src="{{ url_for('static', filename='js/manage_takeout.js') }}"></script>
 {% endblock %}
