Add 60% width constrain back to takeout management and project creation  and anything else that might get added, since it's done through the  body tag now

--- a/static/main.css
+++ b/static/main.css
@@ -2,18 +2,9 @@
     box-sizing: border-box;
 }
 
-#main-container {
+body {
     margin: 1% auto 1% auto;
     width: 60%;
-}
-
-#visualization {
-    width: 100%;
-}
-
-canvas, svg {
-    margin: auto;
-    display: block;
 }
 
 input, select, textarea, button {
@@ -40,11 +31,11 @@ div>#project-buttons {
     align-items: center;
 }
 
-#buttons>button {
+#takeout_buttons>button {
     margin-left: auto;
 }
 
-#buttons {
+#takeout_buttons {
     display: flex;
 }
 
