--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     </div>
 
     <div id="takeout-section" data-full="{{ 'True' if db else '' }}">
-        <div id="buttons">
+        <div id="takeout_buttons">
             <div id="takeout-buttons">
                     <button id="takeout-setup-button" class="button">Add Takeout</button>
                     <button id="update-records-button" class="button" {{ 'disabled' if not db else '' }}>
