Change #buttons div id to #all-buttons to make it slightly less  confusing

--- a/static/main.css
+++ b/static/main.css
@@ -31,11 +31,11 @@ div>#project-buttons {
     align-items: center;
 }
 
-#takeout_buttons>button {
+#all-buttons>button {
     margin-left: auto;
 }
 
-#takeout_buttons {
+#all-buttons {
     display: flex;
 }
 
