--- a/templates/new_project.html
+++ b/templates/new_project.html
@@ -3,7 +3,6 @@
 {% block title %}YT Data Analysis - Setup{% endblock %}
 
 {% block body %}
-    <div id="main-container">
         {% if path %}
             <div class="project-dir-path">
                 Current directory: <span class="path">{{ path }}</span>
@@ -18,14 +17,14 @@
         </div>
         {% include "flash_messages.html" %}
         <div id="switch-project-container" class="hidden">
-            <form id="switch-project-form" action="{{ url_for('setup_project_form') }}" method="POST">
+            <form id="switch-project-form" action="{{ url_for('project.setup_project_form') }}" method="POST">
                 <input id="existing-project-dir-input" name="project-dir" placeholder="Project directory path" required>
                 <input id="existing-project-submit-button" class="button" type="submit" value="Switch to">
             </form>
         </div>
         <div id="setup-project-container" class="hidden">
                 <form id="setup-project-form"
-                      action="{{ url_for("setup_project_form") }}" method="POST">
+                      action="{{ url_for("project.setup_project_form") }}" method="POST">
                     <span>
                         <label for="project-dir-input">Directory path</label>
                         <input id="project-dir-input" name="project-dir" required>
@@ -39,5 +38,4 @@
             {% include "help/setup_project_help.html" %}
         </div>
         <script src="{{ url_for('static', filename='js/create_project.js') }}"></script>
-    </div>
 {% endblock %}
