Add a plot displaying watch history (videos watched per unit of time),  along with a slider that adjusts by what unit of time the videos are  grouped

--- a/static/dash_graph.css
+++ b/static/dash_graph.css
@@ -1,3 +1,7 @@
+* {
+    font-family: "Open Sans", verdana, arial, sans-serif ;
+    color: rgb(68, 68, 68);
+}
 #date-period-slider {
     margin: 3% 0;
 
