Change the color of the progress bar for DB operations to dodgerBlue to  match the color scheme

--- a/static/dash_graph.css
+++ b/static/dash_graph.css
@@ -11,3 +11,6 @@
     margin: 0 3%;
 }
 
+/*#watch-history.js-plotly-plot .plot-container.plotly .svg-container .main-svg .draglayer.cursor-crosshair .xy * {*/
+    /*cursor: pointer;*/
+/*}*/
