--- a/static/main.css
+++ b/static/main.css
@@ -124,7 +124,7 @@ h1, h3 {
 }
 
 #progress-bar {
-    background-color: #00cc00;
+    background-color: dodgerblue;
     width: 0;
     height: 28px;
     transition: all 0.1s ease;
