Set overflow-x to hidden for the date period summary tables as it'll never actually be necessary

--- a/static/dash_graph.css
+++ b/static/dash_graph.css
@@ -33,3 +33,8 @@ body > * {
     float: left;
     margin: 5px 5px;
 }
+
+.row-1 {
+    overflow-x: hidden!important;
+    overflow-y: scroll!important;
+}
