- Move layout organization for the Dash app into the global scope  - Add scatter graphs for most liked/disliked videos/channels by ratio;  to be fully finished next  - Add functions for retrieving data for most watched  videos/tags/channels, yet to be passed into tables and/or graphs

--- a/static/dash_graph.css
+++ b/static/dash_graph.css
@@ -3,9 +3,13 @@ body > * {
     color: #444444;
 }
 
-#graph-adjuster {
-    width: 150px;
+#ratio-graphs-slider-container {
+    width: 950px;
+}
+
+#date-period-slider-container {
     margin: -400px 0 400px 65%;
+    width: 150px;
 }
 
 .rc-slider-track {
