- In ratio graphs, get rid of one, make the remaining one adjustable  by specifying X/Y axis via a dropdown menu  - Refactor the above graph and all its related HTML ids, elements and  functions from 'ratio' to 'v_scatter'  - Add a summary for the videos' ratio graphs, generated on mouseover  in a separate div  - Move easily assignable CSS declarations from an external sheet into  the actual element creation  - Fix an issue with history chart summary cells remaining green while  staying in daily/hourly chart and clicking on a sufficient amount of  various dates, eventually leading to all the cells being green, as  opposed to just the ones with Channel names  - Add video status (active or inactive) to the summary for the videos'  scatter graph

--- a/static/dash_graph.css
+++ b/static/dash_graph.css
@@ -3,15 +3,6 @@ body > * {
     color: #444444;
 }
 
-#ratio-graphs-slider-container {
-    width: 950px;
-}
-
-#date-period-slider-container {
-    margin: -400px 0 400px 65%;
-    width: 150px;
-}
-
 .rc-slider-track {
     background-color: rgb(31, 119, 180);
     border-color: rgb(31, 119, 180);
@@ -22,25 +13,13 @@ body > * {
     color: rgb(31, 119, 180);
 }
 
-#channels-table {
-    width: 800px;
-    float: left;
-    margin: 5px 5px;
-}
-#tags-table {
-    width: 300px;
-    float: left;
-    margin: 5px 5px;
-}
-#topics-table {
-    width: 300px;
-    float: left;
-    margin: 5px 5px;
-}
-
 .row-1 {
     overflow-x: hidden!important;
     overflow-y: auto!important;
+}
+
+#channels-table > div:nth-child(1) > div:nth-child(1) > div:nth-child(2) {
+    overflow-y: scroll!important;
 }
 
 #tags-table > div:nth-child(1) > div:nth-child(1) > div:nth-child(1) > div:nth-child(2),
