- For the video scatter graph, add Channel legends for videos in the  graph  - Add descriptive headers for graphs  - Change the background color of the Dash web page  - Remove the now redundant function for top/bottom liked/disliked  videos by ratio  - Remove an out of place WHERE statement in an SQL query for the video  scatter graph

--- a/static/dash_graph.css
+++ b/static/dash_graph.css
@@ -1,6 +1,17 @@
+body {
+    background-color: #fcfafa
+}
+
 body > * {
     font-family: "Open Sans", verdana, arial, sans-serif ;
-    color: #444444;
+}
+
+h3 {
+    color: dodgerblue;
+}
+
+._dash-undo-redo {
+  display: none;
 }
 
 .rc-slider-track {
