===General cleaning/organization===  - Move modules sql_utils, flask_utils and utils  into a directory named utils, rename them  - Move utility functions that are only used by any one module into that  module  - Rename get_from_sql to get_data  - Move data retrieving for the watch history chart and its summary  tables into a separate module in get_data due to the large size  - Replace open mode in write_to_file function with 'w' (was 'r')  ======  - Add a button to go to the Dash page from the index one (Takeout)  - Update and clarify the description of how to import multiple Takeout  files

--- a/static/main.css
+++ b/static/main.css
@@ -176,6 +176,30 @@ input:not([type=submit]) {
     transition: 0.05s;
 }
 
+#visualize-button-container {
+    display: flex;
+}
+
+#visualize-button {
+    width: 200px;
+    height: 50px;
+    border: 1px solid limegreen;
+    background-color: white;
+    color: limegreen;
+    transition: 0.05s;
+    margin: 50px auto;
+}
+
+#visualize-button:hover:enabled {
+    background-color: limegreen;
+    color: white;
+    transition: 0.05s;
+}
+#visualize-button:disabled {
+    background-color: lightgray;
+    color: darkslategrey;
+}
+
 hr {
     border: none;
     height: 1px;
