- Completely rework SSE events for Takeout insertion/updating and its  Javascript code:    - Add the event attribute to each event to distinguish between which    is a progress bar update, which is a an overall stage of the process    update and which is the final update    - Refactor Javascript code to only have the event listeners assigned    once and hopefully completely avoid duplicate listeners
 - Rely on the visibility css property instead of display to hide/unhide
 certain elements to avoid affecting the layout

 - Remove certain stats from the summary given upon completion of
 Takeout insertion as they're somewhat confusing, difficult to explain
 in a few words and not too important

 - change get_watch_history_files to only work with Takeout archives
 that were extracted to directories with identical names, due to needing
 the information on when the archive was created

--- a/static/main.css
+++ b/static/main.css
@@ -32,15 +32,12 @@ div>#project-buttons {
 }
 
 #all-buttons>button {
-    margin-left: auto;
+    /*margin-left: auto;*/
 }
 
 #all-buttons {
     display: flex;
-}
-
-#takeout-buttons>button {
-    margin-right: 3px;
+    justify-content: space-between;
 }
 
 .path {
@@ -49,6 +46,10 @@ div>#project-buttons {
 
 .hidden {
     display: none;
+}
+
+.invisible {
+    visibility: hidden;
 }
 
 form {
@@ -102,11 +103,12 @@ h1, h3 {
 }
 
 #db-progress {
+    height: 100px;
     margin: 20px 0;
 }
 
 #progress-bar-container {
-    display: none;
+    visibility: hidden;
     flex-direction: row;
     align-items: center;
 }
@@ -182,12 +184,11 @@ input:not([type=submit]) {
 
 #visualize-button {
     width: 200px;
-    height: 50px;
     border: 1px solid limegreen;
     background-color: white;
     color: limegreen;
     transition: 0.05s;
-    margin: 50px auto;
+    /*margin-right: 200px;*/
 }
 
 #visualize-button:hover:enabled {
