On the index page and client side code:  - Clean out pieces of code from the badly checked (last) merge in order  to fix certain bugs related to SSE on the client side  - Un-hide the Stop button for DB processes, rely on enabling/disabling  it instead  - Remove some debugging console logging
 On the backend:
  - Change the SSE event type "error" to "errors" to avoid conflating
 SSE/eventSource errors with custom ones defined in the app

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
                     <button id="takeout-setup-button" class="button">Add Takeout</button>
                     <button id="update-records-button" class="button" {{ 'disabled' if not db else '' }}>
                         Update existing records</button>
-                    <button id="takeout-cancel-button" class="button-cancel invisible">Stop</button>
+                    <button id="takeout-cancel-button" class="button-cancel" disabled>Stop</button>
             </div>
             <button id="visualize-button" class="button" {{ 'disabled' if not db else '' }}>Visualize</button>
             <button id="new-project-button" class="button">New project</button>
