- Introduce a new event type 'stop' for SSE to resolve idiosyncrasies  of enabling/disabling the right buttons when starting/stopping/allowing to finish takeout DB operations

--- a/templates/index.html
+++ b/templates/index.html
@@ -45,6 +45,7 @@
             </div>
             <div id="progress-msg"></div>
             <div id="wait-for-db"></div>
+            <div id="process-results"></div>
         </div>
     </div>
     {% include "help/takeout_help.html" %}
