- Improve from_divs_to_dict in convert_takeout to combine attributes  such as title and others from multiple records for the same ID where  possible  - In the same functions, eliminate timestamps from the unknown record  that were found for known records. See comments in the function for  more details  - Improve the mechanism for detecting duplicate timestamps from,  Takeout, refactor it in to a function, use in insert_videos in addition  to its usage in convert_takeout  - Remove some debugging print lines from said mechanism  - Expand the Takeout documentation on the index page to include the  hopefully final notes on timestamps + some other minor additions  - Change h3 headers to h2 headers, add sub-headers in Takeout  documentation  - Add a constant MAX_TIME_DIFFERENCE to config, currently only for use  with the are_different_timestamps function in utils.gen

--- a/static/main.css
+++ b/static/main.css
@@ -89,12 +89,14 @@ form>span {
     margin: 5% auto 1.5% auto;
 }
 
-p, h3 {
+ h3, h4 {
     margin: 8px 0;
 }
 
-h1, h3 {
-    color: gray;
+p { margin: 8px 0;}
+
+h1, h2, h3, h4{
+    color: darkgrey;
 }
 
 .link-btn, .link-btn:visited {
