--- a/templates/help/takeout_help.html
+++ b/templates/help/takeout_help.html
@@ -1,8 +1,24 @@
     <a href="#" id="takeout-help-link" class="link-btn">How this works{{ ':' if description or not db else '...' }}</a>
-<div id="takeout-help" class="{{ '' if description or not db else 'hidden' }}">
+<div id="takeout-help" class="{{ 'hidden' if description or not db else '' }}">
     <hr>
     <div class="help-item">
-        <h3>Data retrieval and insertion</h3>
+        <h2>The goal of the app</h2>
+        <p>is to gather some data about your YouTube watch history and do some light visualization of it.
+            There's a few interactive graphs and tables on the Visualize page, and the data itself
+            could be used for more directed analysis.
+        </p>
+        <p>
+            An SQLite browser, such as
+            <a class="link-btn link-btn:visited" href="https://sqlitebrowser.org/" target="_blank"
+            >DB Browser for SQLite</a>, could be used for exploring the data and making simple graphs as well.
+        </p>
+        <p>
+            This wasn't designed as a tool for exhaustive data gathering and record keeping. Even if it were,
+            inaccuracies of Takeout data would not allow for that (read below to see why).
+        </p>
+    </div>
+    <div class="help-item">
+        <h2>Data retrieval and insertion</h2>
         <p>
             The Takeout watch-history.html file(s) gets parsed for the available info. Some records will only contain a
             timestamp of when the video was opened/watched, presumably when the video itself is no longer available.
@@ -12,7 +28,7 @@
             All the IDs are then queried against YouTube Data API for additional information. Combined with the
             timestamps from Takeout, the records are then inserted into a database, located in the project directory
             under the default name of yt.sqlite. Those without identifying info are collectively inserted
-            as a single 'unknown', to keep track of the total amount of videos ever opened.
+            as a single 'unknown'.
         </p>
         <p>
             Each successful query to the API uses 11 points, with the standard daily quota being 1M.
@@ -24,38 +40,57 @@
         </p>
         <p>
             Should the process get interrupted for any reason, it's safe to restart it using the same Takeout
-            files; no duplicates will be created and no duplicate queries will be made.
+            files; no duplicates will be created and no duplicate queries will be made (except 1 every time).
         </p>
     </div>
     <div class="help-item">
-        <h3>Takeout quirks and data accuracy</h3>
+        <h2>Takeout quirks and data accuracy</h2>
         <p>
             Takeout works strangely (badly). The first three times I've used it, varying numbers of records were
             returned each time. The second time returned fewer than the first and the last returned more than the
             first two, including records older than the ones in the first two as well as additional records
-            throughout the whole watch history. I've stopped keeping track afterwards.
+            throughout the whole watch history. The next few I paid attention to also varied in the amount returned.
             The oldest records were from April of 2014, with the Youtube account having been created and first
             used sometime in 2011.
         </p>
         <p>
-            It does not seem to return a full watch history in any case, when compared to the History page on Youtube,
-            though the difference is not drastic. Curiously, the History page is also missing some videos that are
-            present in Takeout.
+            The oldest records were from April of 2014, with the Youtube account having been created and first
+            used sometime in 2011.
         </p>
         <p>
-            The timestamps for when the videos were opened contain no timezone information and seem to be
-            returned in local time of the computer the Takeout archive creation was initiated on. That includes those
-            for videos that may have been watched in a different timezone.
+            In addition to that, all the archives were missing some amount of records for each year they did cover,
+            when compared to the History page on Youtube, though the difference is not drastic. Curiously, the
+            History page is also missing some videos that are present in Takeout.
+        </p>
+        <h4>Timestamps</h4>
+        <p>
+            In short, the timestamps are not accurate, just like the overall YouTube Takeout data, and aren't
+            processed accurately by the app, either. They shouldn't be relied on for anything precise, but would work
+            fine for a rough overview of activity over a given period of time, etc.
         </p>
         <p>
-            Furthermore, in the case of zones observing Daylight Saving Time (DST), all of the timestamps are set to
-            either the DST timezone or the non-DST one, dependent on the date the archive was created. That
+            There is no timezone information beyond abbreviations like EDT/PST/CET and so on.
+            They seem to be returned in local time of the computer the Takeout archive creation
+            was initiated on (including those for videos that may have been watched in a different timezone).
+            However, changing the timezone on my machine never triggered a change in the timestamps, so it's probably
+            more complicated than that.
+        </p>
+        <p>
+            In the case of zones observing Daylight Saving Time (DST), all of the timestamps seem to be set to
+            either the DST timezone or the non-DST one, depending on the date the archive was created. That
             is, if someone who lives on the East coast of US creates an archive in May, all the timestamps, including
-            ones that should be in EST (November - March) will be set to EDT and vice versa if it was created in
+            ones that should be in EST (November - March) will be set to EDT and vice versa if it gets created in
             February.
         </p>
+        <h4>Duplicate timestamps because of potential different timezones for different Takeout archives</h4>
         <p>
-            The app attempts to correct the timestamps' DST offsets, if the machine it's run on is in such a timezone.
+            Since different Takeout archives may have different timezones, depending on when/where they were downloaded,
+            there may be duplicate timestamps in different timezones. To weed out the duplicates, any timestamps for
+            the same video ID that have been watched at the same year, month, minute and second as well as less than
+            26 hours apart are treated as one. This may also block a limited amount of legitimate timestamps from being
+            entered. Most of them would be the ones attached to records with no ID info whatsoever.
+            Considering the records returned by Takeout are not complete as is, 1-10 (3 unknown ones for me personally)
+            extra lost timestamps seemed like an good trade-off.
         </p>
     </div>
     <script>
