--- a/templates/help/takeout_help.html
+++ b/templates/help/takeout_help.html
@@ -1,5 +1,5 @@
     <a href="#" id="takeout-help-link" class="link-btn">How this works{{ ':' if description or not db else '...' }}</a>
-<div id="takeout-help" class="{{ 'hidden' if description or not db else '' }}">
+<div id="takeout-help" class="{{ '' if description or not db else 'hidden' }}">
     <hr>
     <div class="help-item">
         <h2>The goal of the app</h2>
@@ -40,7 +40,9 @@
         </p>
         <p>
             Should the process get interrupted for any reason, it's safe to restart it using the same Takeout
-            files; no duplicates will be created and no duplicate queries will be made (except 1 every time).
+            files; no duplicates will be created and no duplicate queries will be made (except 1 every time). It's best
+            not to re-use the same files after their records have been fully inserted, however, as that slows down the
+            process for no good reason.
         </p>
     </div>
     <div class="help-item">
